<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3C3A3A"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/addressLabel"
        android:layout_width="152dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/delivery_address"
        android:textAlignment="viewStart"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/deliveryLabel"
        android:layout_width="190dp"
        android:layout_height="31dp"
        android:layout_marginTop="8dp"
        android:text="@string/delivery_price"
        android:textAlignment="viewStart"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distanceLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/phoneLabel"
        android:layout_width="152dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/phone"
        android:textAlignment="viewStart"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/totalLabel"
        android:layout_width="190dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/total_price"
        android:textAlignment="viewStart"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deliveryLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/providerLabel"
        android:layout_width="152dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/provider"
        android:textAlignment="viewStart"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/coalLabel"
        android:layout_width="152dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/coal"
        android:textAlignment="viewStart"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/providerLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/priceLabel"
        android:layout_width="152dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/price"
        android:textAlignment="viewStart"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coalLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/amountLabel"
        android:layout_width="152dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/amount"
        android:textAlignment="viewStart"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/distanceLabel"
        android:layout_width="152dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/delivery_distance"
        android:textAlignment="viewStart"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/providerValue"
        android:layout_width="190dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/value"
        android:textAlignment="textEnd"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021" />

    <TextView
        android:id="@+id/coalValue"
        android:layout_width="190dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/value"
        android:textAlignment="textEnd"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/providerLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/priceValue"
        android:layout_width="190dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/value"
        android:textAlignment="textEnd"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coalLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/amountValue"
        android:layout_width="190dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/value"
        android:textAlignment="textEnd"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/addressValue"
        android:layout_width="190dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/value"
        android:textAlignment="textEnd"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/distanceValue"
        android:layout_width="190dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/value"
        android:textAlignment="textEnd"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/deliveryValue"
        android:layout_width="190dp"
        android:layout_height="31dp"
        android:layout_marginTop="8dp"
        android:text="@string/value"
        android:textAlignment="textEnd"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distanceLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/totalValue"
        android:layout_width="190dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/value"
        android:textAlignment="textEnd"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deliveryLabel"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/phoneValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Введите номер"
        android:inputType="phone"
        android:textAlignment="textEnd"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toEndOf="@+id/phoneLabel"
        app:layout_constraintTop_toBottomOf="@+id/totalValue"
        app:layout_constraintVertical_bias="0.022" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="#706A6A"
        android:text="@string/confirm"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92" />

</android.support.constraint.ConstraintLayout>